--- a/css/styles.css
+++ b/css/styles.css
@@ -465,7 +465,7 @@ img {
   fill: currentColor;
 }
 .subscribe {
-  margin-left: 93px;
+  margin-left: auto;
 }
 .subscribe .title {
   display: inline-block;
@@ -480,6 +480,10 @@ img {
 .subscribe-mail-input {
   width: 358px;
   height: 50px;
+  padding-top: 15px;
+  padding-left: 16px;
+  padding-bottom: 15px;
+  color: var(--header-bgd-color);
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -551,6 +555,7 @@ img {
   color: var(--title-color);
 }
 .input-label {
+  display: inline-block;
   margin-bottom: 4px;
   font-size: 12px;
   line-height: 1.16;
@@ -559,6 +564,7 @@ img {
 }
 .input-field {
   position: relative;
+  /* margin-top: 4px; */
   margin-bottom: 10px;
   color: var(--title-color);
 }
@@ -586,23 +592,36 @@ img {
   transform: translate(-50%, -50%);
   fill: currentColor;
 }
-.modal-input.coment {
-  padding: 12px 16px;
-  height: 120px;
-  resize: none;
-}
 .modal-input.coment:placeholder {
-  font-size: 12px;
-  line-height: 1.16;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-.accept {
-  position: relative;
-  margin-left: 8px;
+.modal-input.coment {
+  margin-bottom: 20px;
+  padding: 12px 16px;
+  height: 120px;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+  resize: none;
 }
 .check-box {
   position: absolute;
+}
+.accept {
+  display: inline-block;
+  position: relative;
+  margin-left: 15px;
+}
+.custom-box {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  outline: 1px solid red;
 }
 .icon-unchecked {
   position: absolute;
@@ -626,14 +645,18 @@ img {
   opacity: 0;
 }
 .police-accept {
-  /* display: inline-block; */
-  padding-left: 20px;
+  display: inline-block;
+  padding-left: 23px;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--text-color);
 }
 .accept-accent {
+  /* margin-left: 5px; */
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
   color: var(--link-selection-solor);
 }
 .subscribe-btn.send {
