--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,24 @@
-@import "/sass/utils/variables";
-@import "/sass/base/normalize";
-@import "/sass/components/paage-header";
+@import "./utils/vars";
+
+@import "./base/reset";
+@import "./base/common";
+
+@import "./components/buttons";
+@import "./components/logo";
+@import "./components/section-title";
+@import "./components/footer-titles";
+@import "./components/filters-buttons-list";
+@import "./components/project_card";
+
+@import "./layouts/header";
+@import "./layouts/hero";
+@import "./layouts/speciality";
+@import "./layouts/directions";
+@import "./layouts/team";
+@import "./layouts/clients";
+@import "./layouts/footer-contacts";
+@import "./layouts/footer-company-soc";
+@import "./layouts/footer-subscribe";
+@import "./layouts/modal-window";
+@import "./layouts/modal-inputs";
+@import "./layouts/projects";
